Изменение цветовой палитры

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,11 +1,12 @@
 :root {
     --header-height: 3.5rem;
     /*========== Colors ==========*/
-    --first-color: #2866c4;
+    --first-color: #ff3c009e;
+    --first-color-alt: #ff3c00;
     --second-color: #fff;
-    --button-color: #2f5a9a;
-    --button-color-alt: #2866c4;
-    --title-color: #2f5a9a;
+    --button-color: #ff3c009e;
+    --button-color-alt: #ff3c00;
+    --title-color: #ff3c00;
     --text-color: #d1dede;
     --text-color-light: #e2eded;
     --body-color: #f7f7f7;
