Компоненты берут данные из базы

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -10,6 +10,7 @@
     --text-color: #000;
     --border-color: #d1d7e3;
     --body-color: #f7f7f7;
+    --text-white: #fff;
 }
 :root .dark {
     /*========== Colors ==========*/
