--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,32 +1,29 @@
 :root {
     --header-height: 3.5rem;
-    /*========== Colors ==========*/
-    --first-color: #ff3c009e;
-    --first-color-alt: #ff3c00;
-    --second-color: #fff;
-    --button-color: #f04511;
-    --button-color-alt: #ff3c00;
-    --title-color: #f04511;
+    // /*========== Colors ==========*/
+    --title-color: #cc0033;
+    --title-color-alt: #cc0033;
     --text-color: #000;
+    --first-color: #fff;
+    --first-color-alt: #cc0033;
+    --second-color: #fff;
     --border-color: #d1d7e3;
     --body-color: #f7f7f7;
-    --text-white: #fff;
     --icon-color: #959595;
     --dp-font-family: "Montserrat", sans-serif !important;
     --dp-border-color: #d1d7e3;
-
+    --dp-border-color-hover: #cc0033;
+    --dp-month-year-row-height: 19px;
+    --dp-cell-size: 30px;
     --dp-border-radius: 10px;
 }
 :root .dark {
     /*========== Colors ==========*/
-    --first-color: #ff3c009e;
-    --first-color-alt: #ff3c00;
-    --second-color: #27292d;
-    --button-color: #ff3c009e;
-    --button-color-alt: #ff3c00;
     --title-color: #fff;
+    --title-color-alt: #cc0033;
     --text-color: #fff;
     --text-color-light: #e2eded;
+    --second-color: #27292d;
     --body-color: #1f2023;
     --border-color: none;
 }
@@ -34,7 +31,7 @@ body {
     scroll-behavior: smooth;
 }
 * {
-    font-family: "Montserrat", sans-serif;
+    font-family: var(--dp-font-family);
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -70,7 +67,39 @@ h6 {
     min-height: 100vh;
     background: var(--body-color);
     transition: 0.4s;
+    padding-top: var(--header-height);
 }
 .section {
-    padding: 6.5rem 0 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__filters {
+        min-height: calc(100vh - 56px);
+    }
+    &__schedule {
+        padding-bottom: 1rem;
+    }
+}
+.dp__theme_light {
+    --dp-primary-color: #cc0033 !important;
+}
+@media screen and (max-width: 992px) {
+    .container {
+        max-width: 720px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .container {
+        max-width: 540px;
+    }
+}
+@media screen and (max-width: 576px) {
+    .container {
+        max-width: 500px;
+    }
+}
+@media screen and (max-width: 470px) {
+    .container {
+        max-width: 350px;
+    }
 }
