--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -67,17 +67,19 @@ h6 {
     min-height: 100vh;
     background: var(--body-color);
     transition: 0.4s;
-    padding-top: var(--header-height);
 }
 .section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     &__filters {
-        min-height: calc(100vh - 56px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 56px);
+        padding-top: var(--header-height);
     }
     &__schedule {
-        padding-bottom: 1rem;
+        min-height: 100vh;
+        padding-top: calc(var(--header-height) + 20px);
+        padding-bottom: 20px;
     }
 }
 .dp__theme_light {
