теперь секции учитываются после рендера

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -73,7 +73,7 @@ h6 {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: calc(100vh - 56px);
+        height: 100vh;
         padding-top: var(--header-height);
     }
     &__schedule {
