модельное окно с сообщением

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -102,6 +102,11 @@ h6 {
 }
 @media screen and (max-width: 470px) {
     .container {
-        max-width: 350px;
+        max-width: 370px;
+    }
+}
+@media screen and (max-width: 360px) {
+    .container {
+        max-width: 340px;
     }
 }
